# mojDogv1

./: .gitignore  CMakeLists.txt  README_BOARDS.md  apicheatsheat.md  partitions_2mb.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c3
FromExamples/servo_dog/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
FromExamples/servo_dog/main/: CMakeLists.txt  idf_component.yml  servo_dog.c
FromExamples/servo_dog_ctrl/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  esp_hi_web_control.c  idf_component.yml  servo_control_setting.c  servo_dog_ctrl.c
FromExamples/servo_dog_ctrl/assets/: index.html  main.js  nipplejs.min.js  styles.css
FromExamples/servo_dog_ctrl/include/: esp_hi_web_control.h  servo_dog_ctrl.h
FromExamples/servo_dog_ctrl/priv_include/: servo_control_setting.h
FromExamples/web_control/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
FromExamples/web_control/main/: CMakeLists.txt  Kconfig  app_main.c  idf_component.yml
JupYterChaptersYoo/: Chapter1.ipynb  DogBotTracker.ipynb  FlasherNotebook.ipynb  README.md  dogbot_fleet-Copy1.csv  dogbot_fleet.csv
boards/esp32c3_dog/: board_config.h
main/: CMakeLists.txt  config.h  dog_peripherals.c  dog_peripherals.h  led.c  main.c  ota.c  ota.h  paulbot_audio.h  timekeep.c  timekeep.h  webserver.c  webserver.h  wifi_mgr.c  ws2812.c
scratch/: gen_boot_sound.py
