set(SRCS "servo_dog_ctrl.c")
set(PRIV_REQUIRES "esp_driver_ledc")
set(EMBED_FILES "")

if(CONFIG_ESP_HI_WEB_CONTROL_ENABLED)
    list(APPEND SRCS "esp_hi_web_control.c" "servo_control_setting.c")
    list(APPEND EMBED_FILES "assets/favicon.ico" "assets/nipplejs.min.js")
    list(APPEND EMBED_FILES "assets/index.html" "assets/calibration.png" "assets/main.js" "assets/styles.css")
endif()

idf_component_register(SRCS ${SRCS}
                    INCLUDE_DIRS "include"
                    PRIV_INCLUDE_DIRS "priv_include"
                    PRIV_REQUIRES "esp_http_server" "nvs_flash"
                    EMBED_FILES ${EMBED_FILES})